--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set REACT_APP_API_URL=https://distribution-app-backend-e02520eab281.herokuapp.com/api && react-scripts build",
+    "build": "cross-env REACT_APP_API_URL=https://distribution-app-backend-e02520eab281.herokuapp.com/api react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.25.8"
+    "@babel/plugin-transform-private-property-in-object": "^7.25.8",
+    "cross-env": "^7.0.3"
   }
 }
