--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.25.8",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
