--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,8 @@
   status = 200
 
 [build]
-  command = "npm ci && npm run build"
+  command = "CI=false npm run build"
   publish = "build"
+
+[build.environment]
+  NODE_VERSION = "18"
