--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env REACT_APP_API_URL=https://distribution-app-backend-e02520eab281.herokuapp.com/api react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false cross-env REACT_APP_API_URL=https://distribution-app-backend-e02520eab281.herokuapp.com/api react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
